<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>trajectory_estimation</name>
  <version>1.0.0</version>
  <description>
  A package that predicts future trajectories using regression analysis based on odometry data
  </description>
  <maintainer email="suberkut76@gmail.com">kimhoyun-robotair</maintainer>
  <author email="suberkut76@gmail.com">kimhoyun-robotair</author>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
